tournament-info prizing icons alignment fixed

--- a/public/styles/dashboard_style.css
+++ b/public/styles/dashboard_style.css
@@ -1619,6 +1619,8 @@ text-align: center;
 }
 
 .tournamentInfoPrizingIcon{
+  padding-right: 12px;
+  width: 36px !important;
   font-size: 24px !important;
   display: inline-block;
   margin-top: 0px !important;
@@ -1631,7 +1633,8 @@ text-align: center;
 .prizingList{
   list-style: none;
   padding-top: 5px;
-  margin-left: -54px;
+  padding-left: 0px;
+  margin-left: 0px;
   width: 250px;
 }
 
